Made footer responsive Fixed layout overlaping. footer was overlaping over main container because of position relative. I removed position relative because z-index was not needed and used margin-top instead of top property

--- a/project/static/footer.css
+++ b/project/static/footer.css
@@ -24,3 +24,15 @@
     padding: 10px 200px;
     border-top: 1px solid #e0e0e0;
 }
+
+
+/* Responsive */
+@media screen and (max-width: 560px) {
+    #footer > .paragraph {
+        padding: 0;
+    }
+    .copyright {
+        padding: 0;
+    }
+}
+/* Responsive END */
