--- a/project/static/home.css
+++ b/project/static/home.css
@@ -1,8 +1,8 @@
 #container {
     margin-top: 0px;
     /* height: 100%; */
-    position: relative;
-    z-index: 0;
+    /* position: relative;
+    z-index: 0; */
 }
 
 a {
